--- a/css/tokens.css
+++ b/css/tokens.css
@@ -282,7 +282,8 @@
       }
 
       &[open]::details-content {
-          @apply grid-rows-[0fr] opacity-0;
+          grid-row: 0fr;
+          opacity: 0;
       }
   }
 
